--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -67,13 +67,13 @@ jar {
 
 task sourcesJar(type: Jar, dependsOn: classes) {
   archiveBaseName = 'besu-native-bls12-381'
-  classifier = 'sources'
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
   archiveBaseName = 'besu-native-bls12-381'
-  classifier = 'javadoc'
+  archiveClassifier = 'javadoc'
   from javadoc.destinationDir
 }
 
